packages/tv-ui/src/components/action-buttons/ActionButtonStack/ActionButtonStack.css
.ActionButtonStack {
  --bottom-offset: 1.1em;
  --side-offset: calc(0.8em + (var(--crt-inset-right) / 2) );
  position: absolute;
  bottom: calc(var(--y-dynamic-diff) + var(--crt-inset-bottom) + var(--bottom-offset));
  padding-top: calc(var(--safe-inset-top) + var(--crt-inset-top));
  padding-right: calc(var(--safe-inset-right) + (var(--crt-inset-right) / 2));
  right: var(--side-offset);

  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: end;
  z-index: 3;
  max-height: calc(var(--y-unit-small) * 100 - var(--bottom-offset));

  &.left-handed {
    --side-offset: calc(0.8em + (var(--crt-inset-right) / 2));
    right: unset;
    left: var(--side-offset);
    padding-right: unset;
    padding-left: calc(var(--safe-inset-left) + (var(--crt-inset-left) / 2));
    align-items: start;
  }

  .stack {
    position: relative;
    padding-top: 10px;
    overflow-y: auto;
    /* Firefox will automatically make overflow-x visible if overflow-y is set to auto even if we try to explicitly set
overflow-x to visible. So we hide it instead to avoid horizontal scrollbars appearing. */
    overflow-x: hidden;

    /* To avoid the drop shadows of the buttons being clipped we add some padding */
    min-width: calc(40px + (var(--side-offset) * 3)); /* Button width + padding on either side + extra for scroll bar */
    padding-right: var(--side-offset);
    translate: var(--side-offset) 0;

    --additional-transitions: var(--overflow-indicators-transition);
  }

  .stack, .pinned {
    display: flex;
    /* We reverse the order so that we start from the bottom when scrollable */
    flex-direction: column-reverse;
    align-items: end;

    .folder {
      .folder-contents {
        display: flex;
        flex-wrap: wrap;
        gap: 0.2em;
        flex-direction: row-reverse;
        justify-content: center;
        > * {
          flex: 0 0 0.8em;
        }
      }

      height: 40px;
      width: 40px;
      margin: 5px 0;
      border-radius: 0.3em;

      button& {
        background: none;
        border: none;
        color: inherit;
      }

      .hide-icon {
        height: 100%;
        width: 100%;
        opacity: 0.8;
      }
    }
  }

  &.left-handed .stack {
    translate: calc(var(--side-offset) * -1) 0;
    padding-right: unset;
    padding-left: var(--side-offset);
    align-items: start;
  }

  .toggle-ui {
    /* Stop the position of the toggle icon from shifting relative to the progress bar as the size of the buttons flexes */
    align-items: end;
    svg {
      margin-bottom: 10px;
    }
  }

  .ActionButton {
    /* Rotate icon if device is landscape to reflect device */
    @container viewport (min-aspect-ratio: 1/1) {
      /* width >= height */
      &.letterboxing svg {
        transform: rotate(90deg);
      }
    }

    svg {
      /* Compensate for icons with less mass having visually lighter shadows */
      &.fa-expand {
        --shadow-layer-opacity: 0.24;
      }

      &.fa-down-left-and-up-right-to-center {
        --shadow-layer-opacity: 0.14;
      }

      &.fa-repeat {
        --shadow-layer-opacity: 0.19;
      }

      &.fa-ellipsis-vertical {
        --shadow-layer-opacity: 0.15;
      }

      &.icon-fullscreen {
        --shadow-layer-opacity: 0.3;
      }
    }
  }
}

/* These live inside popover elements which are rendered as children of body */
.action-button-side-panel-edit-tags {
  width: 650px;

  .primary-tag-note {
    margin-top: 0.5em;
    opacity: 0.8;
    font-style: italic;
  }
}
.action-button-create-marker {
  margin: 0.5em;
}
.action-button-rating-stars {
  display: flex;

  &.not-set .clear,
  &:not(.stars) .clear,
  &:has(.rating-stars .star-rating-number) .clear {
    display: none;
  }

  .rating-stars {
    button {
      /* We don't want any margin or gap between the stars so that when moving the cursor between the cursor never goes
      over a space between the buttons which would cause it flick between showing a new rating, the current one and then
      a new one again. */
      margin: 0;

      > div {
        padding-left: 0.2em;
        padding-right: 0.2em;
      }
    }
  }

  .star-rating-number {
    font-size: unset;
  }
  &:not(.left-handed) .star-rating-number {
    order: -1;
    margin-left: 0;
  }

  svg {
    width: 1.5em;
    height: 1lh;
    display: block; /* Remove small space under inline-blocks */
  }
}
.action-button-o-counter {
  display: flex;
  gap: 0.3em;

  button {
    background: none;
    border: none;
    color: inherit;

    &[disabled] {
      opacity: 0.4;
    }
  }
}
.action-button-rating-stars,
.action-button-o-counter {
  font-size: 1.2em;
}

.folder-contents-popover {
  &:not(.left-handed) {
    translate: calc(var(--safe-inset-right) * -1) 0 !important;
  }
  background: none;
  border: 0;
  border-radius: 0;
  display: flex;
  flex-direction: column-reverse;
  overflow-y: auto;
  z-index: 1;
  padding: 0.5em; /* Add some padding so the drop shadow's aren't abruptly cut off by overflow auto */
  overflow: auto;

  > .arrow {
    display: none;
  }
}

